--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 
 <body id="bodyColor">
-    <p class="theme-text"> Нажмите, чтобы поменять тему</p>
+    <p class="theme-text" id="rop"> Нажмите, чтобы поменять тему</p>
     <select name="bgrColor" id="bgrColor" onchange="colorChange()">
         <option value="Blank" default></option>
         <option value="Dark">Темная</option>
         <option value="Light">Светлая</option>
     </select>
     <div class="label-container">
-        <label for="number1">Напишите первое число</label>
+        <label for="number1 text">Напишите первое число</label>
         <input id="number1" type="text">
     </div>
     <div class="label-container">
-        <label for="number2">Напишите второе число</label>
+        <label for="number2 text">Напишите второе число</label>
         <input id="number2" type="text">
     </div>
     <p class="text">Нажмите на знак операции:</p>
@@ -31,10 +31,10 @@
         <button onclick="calcDevision()">/</button>
         <button onclick="calcMultiply()">*</button>
     </div>
-    <div class="result-container"> Результат:
+    <div class="result-container text"> Результат:
         <div id="results"></div>
     </div>
-    <button class="delete" type="button" onclick="clearInput()">Сбросить</button>
+    <button class="delete text" type="button" onclick="clearInput()">Сбросить</button>
 
     <script src="./scr/script/script.js"></script>
 </body>
