--- a/index.html
+++ b/index.html
@@ -16,50 +16,28 @@
         <option value="Dark">Dark</option>
         <option value="Light">Light</option>
     </select>
-
-    <div class="calculator">
+    <div class="calc-container">
         <div class="output">0</div>
-        <button class="btn control">-</button>
-        <button class="btn control">+</button>
-        <button class="btn control">&times;</button>
-        <button class="btn control">&divide;</button>
-        <button class="btn number">9</button>
-        <button class="btn number">8</button>
-        <button class="btn number">7</button>
-        <button class="btn number">6</button>
-        <button class="btn number">5</button>
-        <button class="btn number">4</button>
-        <button class="btn number">3</button>
-        <button class="btn number">2</button>
-        <button class="btn number">1</button>
-        <button class="btn number">0</button>
-        <button class="btn number">.</button>
-        <button class="btn number">AC</button>
-        <button class="btn equal">=</button>
+        <div class="calc-keys">
+            <button class="btn control" data-action="subtract">-</button>
+            <button class="btn control" data-action="add">+</button>
+            <button class="btn control" data-action="multiply">&times;</button>
+            <button class="btn control" data-action="divide">&divide;</button>
+            <button class="btn number">9</button>
+            <button class="btn number">8</button>
+            <button class="btn number">7</button>
+            <button class="btn number">6</button>
+            <button class="btn number">5</button>
+            <button class="btn number">4</button>
+            <button class="btn number">3</button>
+            <button class="btn number">2</button>
+            <button class="btn number">1</button>
+            <button class="btn number">0</button>
+            <button class="btn decimal" data-action="decimal">.</button>
+            <button class="btn clear" data-action="clear">AC</button>
+            <button class="btn calculate" data-action="calculate">=</button>
+        </div>
     </div>
-    </div>
-    </div>
-    <!-- 
-    <div class="label-container">
-        <label for="number1 text">Напишите первое число</label>
-        <input id="number1" type="text">
-    </div>
-    <div class="label-container">
-        <label for="number2 text">Напишите второе число</label>
-        <input id="number2" type="text">
-    </div>
-    <p class="text">Нажмите на знак операции:</p>
-    <div class="button-container">
-        <button onclick="calcSum()">+</button>
-        <button onclick="calcSubstraction()">-</button>
-        <button onclick="calcDevision()">/</button>
-        <button onclick="calcMultiply()">*</button>
-    </div>
-    <div class="result-container text"> Результат:
-        <div id="results"></div>
-    </div>
-    <button class="delete text" type="button" onclick="clearInput()">Сбросить</button> -->
-
     <script src="./scr/script/script.js"></script>
 </body>
 
